main/default/objects/Georesults_business__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Georesults Businesses</relationshipLabel>
    <relationshipName>Georesults_Businesses</relationshipName>
    <type>Lookup</type>
</CustomField>