main/default/objects/Georesults_business__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>Precision of the latitude and longitude coordinates used to map this business address. An accuracy of 1-3 is a very precise map location. An accuracy of 4-8 is less precise and may affect the quality of the distance measurements or geographical area assignments such as County, MSA or Boundary Central Office.</description>
    <inlineHelpText>Precision of the latitude and longitude coordinates used to map this business address. An accuracy of 1-3 is a very precise map location. An accuracy of 4-8 is less precise.</inlineHelpText>
    <label>Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>