main/default/objects/Georesults_business__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>US Postal Service delivery category of this business address location.
&quot;F = Firm Delivery Point
G = General Delivery
H = High Rise
M = Military
P = Post Office Box
R = Rural Route or Hwy
S = Street Address
U = Unknown&quot;</description>
    <inlineHelpText>US Postal Service delivery category of this business address location.</inlineHelpText>
    <label>Address Type</label>
    <type>TextArea</type>
</CustomField>