main/default/objects/Georesults_business__c/fields/BldgEmps__c.field-meta.xml
<CustomField>
    <fullName>BldgEmps__c</fullName>
    <description>Total of all Employees of all businesses located in the same building as this business. This is the sum of all Employees at the BldgID associated with this business.</description>
    <label>Building Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>