main/default/objects/Georesults_business__c/fields/BldgOCX__c.field-meta.xml
<CustomField>
    <fullName>BldgOCX__c</fullName>
    <description>Sum of the estimated OC3s of all businesses located in the same building as this business. This is the sum of OCX at the BldgID associated with this business.</description>
    <label>Building Total OC3 Lines</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>