main/default/objects/Georesults_business__c/fields/BldgTotalBW__c.field-meta.xml
<CustomField>
    <fullName>BldgTotalBW__c</fullName>
    <description>Sum of the estimated bandwidth of all businesses located in the same building as this business. This is the sum of Total Bandwidth at the BldgID associated with this business.</description>
    <label>Building Total Bandwidth</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>