main/default/objects/Georesults_business__c/fields/BldgTotalTelSpend__c.field-meta.xml
<CustomField>
    <fullName>BldgTotalTelSpend__c</fullName>
    <description>Sum of the estimated telecommunications expenditures of all businesses located in the same building as this business. This is the sum of Total TelSpend at the BldgID associated with this business.</description>
    <label>Building Total TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>