main/default/objects/Georesults_business__c/fields/BldgType__c.field-meta.xml
<CustomField>
    <fullName>BldgType__c</fullName>
    <description>GeoResults defined alpha code indicating the range for the number of business tenants in this building.  S = a building with only one business tenant,  MS = a building with 2-5 business tenants, MM = a building with 6-10 business tenants, and ML = a building with 11 or more business tenants.</description>
    <label>Building Type</label>
    <type>TextArea</type>
</CustomField>