main/default/objects/Georesults_business__c/fields/BldgVoiceDS0__c.field-meta.xml
<CustomField>
    <fullName>BldgVoiceDS0__c</fullName>
    <description>The sum of the estimated Voice DS0s of all businesses located in the same building as this business. This is the sum of Voice DS0s at the BldgID associated with this business.</description>
    <label>Building Voice DS0 Lines</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>