main/default/objects/Georesults_business__c/fields/BldgVoiceTelSpend__c.field-meta.xml
<CustomField>
    <fullName>BldgVoiceTelSpend__c</fullName>
    <description>Sum of the estimated voice telecommunications expenditures of all businesses located in the same building as this business. This is the sum of Voice TelSpend at the BldgID associated with this business.</description>
    <label>Building Voice TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>