main/default/objects/Georesults_business__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <formula>CASE(Headquarters_Branch_Code__c, &#39;0&#39;, &#39;Single location&#39;, &#39;1&#39;, &#39;Headquarters location&#39;, &#39;2&#39;, &#39;Branch location&#39;, &#39;Unknown&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Single Location, Headquarters Location, Branch Location or Unknown</inlineHelpText>
    <label>Branch Type</label>
    <type>Text</type>
</CustomField>