main/default/objects/Georesults_business__c/fields/Building_EoC_Capable__c.field-meta.xml
<CustomField>
    <fullName>Building_EoC_Capable__c</fullName>
    <description>If lookup to building is populated. Identify if it is EoC Capable (EoC_c on building).</description>
    <formula>IF(Building__r.EoC__c=1, True, False)</formula>
    <inlineHelpText>If box is checked, then Building is EoC capable</inlineHelpText>
    <label>Building EoC Capable</label>
    <type>Checkbox</type>
</CustomField>