main/default/objects/Georesults_business__c/fields/Building_Net_Classification__c.field-meta.xml
<CustomField>
    <fullName>Building_Net_Classification__c</fullName>
    <description>When lookup to building is populated, auto-populate with Net Classification</description>
    <formula>TEXT (Building__r.Net_Classification__c)</formula>
    <inlineHelpText>This is the Net-Classification of the building in which this business resides</inlineHelpText>
    <label>Building Net-Classification</label>
    <type>Text</type>
</CustomField>