main/default/objects/Georesults_business__c/fields/BusID_Match__c.field-meta.xml
<CustomField>
    <fullName>BusID_Match__c</fullName>
    <description>Number indicating that this business is a duplicate of another business in this database. A number indicates that this is a duplicate appearance of the same business with that number. 0 indicates this is the only occurrence of this business in the database.</description>
    <inlineHelpText>Number indicating that this business is a duplicate of another business in this database.</inlineHelpText>
    <label>BusID Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>