main/default/objects/Georesults_business__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <description>Commonly known name of this business.</description>
    <inlineHelpText>Commonly known name of this business.</inlineHelpText>
    <label>Business Name</label>
    <type>TextArea</type>
</CustomField>