main/default/objects/Georesults_business__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>Integra determined business type based upon NAICS codes provided.</description>
    <inlineHelpText>Integra determined business type based upon NAICS codes provided.</inlineHelpText>
    <label>Business Type</label>
    <type>TextArea</type>
</CustomField>