main/default/objects/Georesults_business__c/fields/CarrierRoute__c.field-meta.xml
<CustomField>
    <fullName>CarrierRoute__c</fullName>
    <description>US Postal Service code assigned to this business address to aid in mail delivery. The code is 1 letter for the carrier route type (city, rural, PO Box, or highway) and 3 digits for the carrier code.</description>
    <inlineHelpText>US Postal Service code assigned to this business address to aid in mail delivery. The code is 1 letter for the carrier route type (city, rural, PO Box, or highway) and 3 digits for the carrier code.</inlineHelpText>
    <label>Carrier Route</label>
    <type>TextArea</type>
</CustomField>