main/default/objects/Georesults_business__c/fields/CBSA__c.field-meta.xml
<CustomField>
    <fullName>CBSA__c</fullName>
    <description>Core Based Statistical Area (CBSA) name for this location, as defined by the Office of Management and Budget (OMB). A CBSA is determined by locating this address, using latitude and longitude, on a US CBSA map.   If this address is not within a CBSA, the field contains &quot;Non-CBSA Area&quot;.  For CBSA&#39;s containing Metropolitan Divisions, GeoResults recognizes the Metro Division Title in place of the OMB&#39;s CBSA Title. This substitution is meant to provide more efficient analysis within exceptionally large geographies.</description>
    <inlineHelpText>Core Based Statistical Area (CBSA) name for this location, as defined by the Office of Management and Budget (OMB)</inlineHelpText>
    <label>CBSA</label>
    <type>TextArea</type>
</CustomField>