main/default/objects/Georesults_business__c/fields/CBSAcode__c.field-meta.xml
<CustomField>
    <fullName>CBSAcode__c</fullName>
    <description>5-digit code associated with the CBSA for this location. For CBSA&#39;s containing Metropolitan Divisions, GeoResults recognizes the Metro Division Code in place of the CBSA Code. This substitution is meant to provide more efficient analysis within exceptionally large geographies.</description>
    <inlineHelpText>5-digit code associated with the CBSA for this location.</inlineHelpText>
    <label>CBSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>