main/default/objects/Georesults_business__c/fields/CellScore__c.field-meta.xml
<CustomField>
    <fullName>CellScore__c</fullName>
    <description>GeoResults modeled ranking score (0-100) indicating a business&#39;s likelihood of being able to use wireless technology considering cost, availability and features. A high score indicates that this business is very likely wireless technology user and a low score indicates a very small likelihood that wireless technology will be useful for this business.</description>
    <label>Cell Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>