main/default/objects/Georesults_business__c/fields/CensusCode__c.field-meta.xml
<CustomField>
    <fullName>CensusCode__c</fullName>
    <description>US Census Bureau code identifying the area where this business is located. This code includes state, county, census tract, census group and census block codes in the format SSCCCTTTTTTGBBB and is used to support the Census Bureau&#39;s data collection operations.</description>
    <inlineHelpText>US Census Bureau code identifying the area where this business is located.</inlineHelpText>
    <label>Census Code</label>
    <type>TextArea</type>
</CustomField>