main/default/objects/Georesults_business__c/fields/Centrex__c.field-meta.xml
<CustomField>
    <fullName>Centrex__c</fullName>
    <description>Estimate of the Centrex Switched Voice Lines used in this business to carry all voice traffic (except 800 services) and FAX Services based on GeoResults proprietary predictive models. A Voice Line or Data Line or equivalents are defined as a 64 kilobit circuit carrying traffic through the telephone network.</description>
    <label>Centrex</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>