main/default/objects/Georesults_business__c/fields/Converted_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger checks box when a converted lead exists associated to this GR Biz</description>
    <label>Converted Lead Exists</label>
    <type>Checkbox</type>
</CustomField>