main/default/objects/Georesults_business__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Federal Information Processing Standards (FIPS) county name where this business is located. County is determined by locating this business address, using latitude and longitude, on a US County map.</description>
    <inlineHelpText>Federal Information Processing Standards (FIPS) county name where this business is located. County is determined by locating this business address, using latitude and longitude, on a US County map.</inlineHelpText>
    <label>County</label>
    <type>TextArea</type>
</CustomField>