main/default/objects/Georesults_business__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Georesults Businesses</relationshipLabel>
    <relationshipName>Georesults_Businesses</relationshipName>
    <type>Lookup</type>
</CustomField>