main/default/objects/Georesults_business__c/fields/Data_DS0s__c.field-meta.xml
<CustomField>
    <fullName>Data_DS0s__c</fullName>
    <description>Estimated number of the data circuits or equivalents used in this business to carry all data traffic based on the GeoResults proprietary predictive models. A Data DS0 or equivalent is defined as a 64 kilobit circuit carrying traffic through the telephone network.</description>
    <label>Data DS0s</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>