main/default/objects/Georesults_business__c/fields/DataBWhi__c.field-meta.xml
<CustomField>
    <fullName>DataBWhi__c</fullName>
    <description>Estimate of the data bandwidth used in this business to carry all data traffic based on GeoResults proprietary predictive models if this business is proactive in their purchases of data services. The estimate is expressed in megabits per second.</description>
    <label>Data Bandwidth High</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>