main/default/objects/Georesults_business__c/fields/DataCellTelSpend__c.field-meta.xml
<CustomField>
    <fullName>DataCellTelSpend__c</fullName>
    <description>Estimated telecommunications expenditures of this business for all wireless data services including local taxes but excluding wireline services. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Data Cell TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>