main/default/objects/Georesults_business__c/fields/DeliveryPointBarCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointBarCode__c</fullName>
    <description>Unique 11-digit identifier defined by the US Postal Service used to address mail for this business location. Postal discounts may be available to direct-mail marketers who print a Delivery Point BarCode on their mail.</description>
    <inlineHelpText>Unique 11-digit identifier defined by the US Postal Service used to address mail for this business location. Postal discounts may be available to direct-mail marketers who print a Delivery Point BarCode on their mail.</inlineHelpText>
    <label>Delivery Point BarCode</label>
    <type>TextArea</type>
</CustomField>