main/default/objects/Georesults_business__c/fields/DS1__c.field-meta.xml
<CustomField>
    <fullName>DS1__c</fullName>
    <description>Estimate of the number of DS1s or equivalents used in this business to carry all traffic based on the GeoResults proprietary predictive models. A DS1 or equivalent is defined as a 1.544 kilobits per second circuit carrying traffic through the public switched telephone network.</description>
    <label>DS1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>