main/default/objects/Georesults_business__c/fields/DS1Flag__c.field-meta.xml
<CustomField>
    <fullName>DS1Flag__c</fullName>
    <description>Flag indicating that this business is a likely user of DS1 service. 1 indicates this business has a high probability of being able to use DS1 technology considering cost, availability and features. 0 indicates that this business is more likely to use other technologies.</description>
    <label>DS1 Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>