main/default/objects/Georesults_business__c/fields/Emps__c.field-meta.xml
<CustomField>
    <fullName>Emps__c</fullName>
    <description>Number of employees located at this business location.</description>
    <inlineHelpText>Number of employees located at this business location.</inlineHelpText>
    <label>Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>