main/default/objects/Georesults_business__c/fields/EnhWlineHSIFlag__c.field-meta.xml
<CustomField>
    <fullName>EnhWlineHSIFlag__c</fullName>
    <description>Flag indicating that this business is a likely user of wireline high speed internet Enhanced service. 1 indicates this business has a high probability of being able to use Enhanced Speed DSL, Cable Modem or equivalent technology considering cost, availability and features. 0 indicates that this business is more likely to use other technologies.</description>
    <label>Enhanced Wireline HiSpeedInt Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>