main/default/objects/Georesults_business__c/fields/Exec_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Exec_First_Name__c</fullName>
    <description>First name of the primary contact at this business location.</description>
    <inlineHelpText>First name of the primary contact at this business location.</inlineHelpText>
    <label>Exec First Name</label>
    <type>TextArea</type>
</CustomField>