main/default/objects/Georesults_business__c/fields/Exec_Prof_Title__c.field-meta.xml
<CustomField>
    <fullName>Exec_Prof_Title__c</fullName>
    <description>Code identifying the title and area of responsibility for the primary contact at this business location.</description>
    <inlineHelpText>Code identifying the title and area of responsibility for the primary contact at this business location.</inlineHelpText>
    <label>Exec Professional Title</label>
    <type>TextArea</type>
</CustomField>