main/default/objects/Georesults_business__c/fields/Exec_Title__c.field-meta.xml
<CustomField>
    <fullName>Exec_Title__c</fullName>
    <description>Occupational title such as Chief Executive Officer, Chief Technology Officer, VP Engineering, Plant Manager, Warehouse Manager, or Medical Director of the primary contact at this business location.</description>
    <inlineHelpText>Occupational title such as Chief Executive Officer, Chief Technology Officer, VP Engineering, Plant Manager, Warehouse Manager, or Medical Director of the primary contact at this business location.</inlineHelpText>
    <label>Exec Title</label>
    <type>TextArea</type>
</CustomField>