main/default/objects/Georesults_business__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <formula>GeoResults_Family_ID__r.GeoResults_Family_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Name</label>
    <type>Text</type>
</CustomField>