main/default/objects/Georesults_business__c/fields/Family_Name_Custom_Link__c.field-meta.xml
<CustomField>
    <fullName>Family_Name_Custom_Link__c</fullName>
    <formula>HYPERLINK(GeoResults_Family_ID__c, Family_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to GeoResults Family if there are other locations associated with this business</inlineHelpText>
    <label>Family Name</label>
    <type>Text</type>
</CustomField>