main/default/objects/Georesults_business__c/fields/Family_Total_DS1_Lines__c.field-meta.xml
<CustomField>
    <fullName>Family_Total_DS1_Lines__c</fullName>
    <description>Sum of DS1 of all businesses with the same Family ID as this business.</description>
    <label>Family Total DS1 Lines</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>