main/default/objects/Georesults_business__c/fields/FamilyBus__c.field-meta.xml
<CustomField>
    <fullName>FamilyBus__c</fullName>
    <description>Count of businesses with the same Family ID as this business.</description>
    <inlineHelpText>Count of total locations associated with this business.</inlineHelpText>
    <label>Family Total Businesses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>