main/default/objects/Georesults_business__c/fields/FamilyBusInMSA__c.field-meta.xml
<CustomField>
    <fullName>FamilyBusInMSA__c</fullName>
    <description>Count of businesses with the same Family ID and located in the same MSA as this business.</description>
    <label>Family Total Businesses In MSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>