main/default/objects/Georesults_business__c/fields/FamilyDataTelSpend__c.field-meta.xml
<CustomField>
    <fullName>FamilyDataTelSpend__c</fullName>
    <description>Sum of Data TelSpend of all businesses with the same Family ID as this business expressed in $(000)&#39;s per year.</description>
    <label>Family Data TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>