main/default/objects/Georesults_business__c/fields/FamilyEmps__c.field-meta.xml
<CustomField>
    <fullName>FamilyEmps__c</fullName>
    <description>Sum of Employees of businesses with the same Family ID as this business.</description>
    <inlineHelpText>Sum of Employees of businesses with the same Family ID as this business.</inlineHelpText>
    <label>Family Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>