main/default/objects/Georesults_business__c/fields/FamilyEmpsInMSA__c.field-meta.xml
<CustomField>
    <fullName>FamilyEmpsInMSA__c</fullName>
    <description>Sum of Employees of businesses with the same Family ID and located in the same MSA as this business.</description>
    <label>Family Total Employees in MSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>