main/default/objects/Georesults_business__c/fields/FamilyID__c.field-meta.xml
<CustomField>
    <fullName>FamilyID__c</fullName>
    <description>GeoResults defined number representing the national family grouping for this business. The family includes branches, divisions, and subsidiaries of a business. The family name is the same as the Cleaned Business Name.</description>
    <label>Family ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>