main/default/objects/Georesults_business__c/fields/FamilyMSAs__c.field-meta.xml
<CustomField>
    <fullName>FamilyMSAs__c</fullName>
    <description>Count of all MSAs containing businesses with the same Family ID as this business.</description>
    <label>Family Total MSAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>