main/default/objects/Georesults_business__c/fields/FamilyOCX__c.field-meta.xml
<CustomField>
    <fullName>FamilyOCX__c</fullName>
    <description>Sum of OCX of all businesses with the same Family ID as this business.</description>
    <label>Family Total OC3 Lines</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>