main/default/objects/Georesults_business__c/fields/FamilySales__c.field-meta.xml
<CustomField>
    <fullName>FamilySales__c</fullName>
    <description>Sum of Sales of businesses with the same Family ID as this business expressed in $(000)&#39;s per year.</description>
    <label>Family Total Sales</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>