main/default/objects/Georesults_business__c/fields/FamilySalesCode__c.field-meta.xml
<CustomField>
    <fullName>FamilySalesCode__c</fullName>
    <description>GeoResults defined alpha code that describes the range of Family Total Sales for the Family ID associated with this business. 
&quot;A = Under $500 M
B = $500 M to $999.9 M 
C = $1 MM to $4.9 MM
D = $5 MM to $9.9 MM
F = $10 MM to $24.9 MM
G = $25 MM to $74.9 MM
H = $75 MM to $199.9 MM
I = $200 MM to $499.9 MM
J = $500 MM to $999.9 MM
K = $1 Billion +
U = Unknown&quot;</description>
    <label>Family Total Sales Size Code</label>
    <type>TextArea</type>
</CustomField>