main/default/objects/Georesults_business__c/fields/FamilyTotalDS0__c.field-meta.xml
<CustomField>
    <fullName>FamilyTotalDS0__c</fullName>
    <description>Sum of Total DS0s of businesses with the same Family ID as this business.</description>
    <label>Family Total DS0 Lines</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>