main/default/objects/Georesults_business__c/fields/FamilyTotalDS0inMSA__c.field-meta.xml
<CustomField>
    <fullName>FamilyTotalDS0inMSA__c</fullName>
    <description>Sum of Total DS0s of businesses with the same Family ID and located in the same MSA as this business.</description>
    <label>Family Total DS0s in MSA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>