main/default/objects/Georesults_business__c/fields/FortuneRank__c.field-meta.xml
<CustomField>
    <fullName>FortuneRank__c</fullName>
    <description>Fortune 1000 ranking for the parent company of this business. The annual Fortune 1000 ranking is maintained by Fortune magazine and represents the largest 1000 US companies based on total revenues.</description>
    <inlineHelpText>Fortune 1000 ranking for the parent company of this business.</inlineHelpText>
    <label>Fortune Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>