main/default/objects/Georesults_business__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of the primary contact at this business location.</description>
    <inlineHelpText>Gender of the primary contact at this business location.</inlineHelpText>
    <label>Gender</label>
    <type>TextArea</type>
</CustomField>