main/default/objects/Georesults_business__c/fields/GeoResults_Family_ID__c.field-meta.xml
<CustomField>
    <fullName>GeoResults_Family_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GeoResults Family ID</label>
    <referenceTo>Georesults_family__c</referenceTo>
    <relationshipLabel>Georesults Businesses</relationshipLabel>
    <relationshipName>Georesults_Businesses</relationshipName>
    <type>Lookup</type>
</CustomField>