main/default/objects/Georesults_business__c/fields/HBBFlag__c.field-meta.xml
<CustomField>
    <fullName>HBBFlag__c</fullName>
    <description>Flag indicating that this business location is a likely home-base business based on GeoResults proprietary predictive models. A home-based business is defined as a business conducted out of a residence with no other headquarters location. 1 = a likely home-based business 0 = probably not a home-based business.</description>
    <label>Home Based Business Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>