main/default/objects/Georesults_business__c/fields/Headquarters_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Branch_Code__c</fullName>
    <description>Code denoting whether this business is a single location, a corporate or subsidiary headquarters location, or a branch location. 0 = single location, 1 = headquarters location, 2 = branch location, and 9 = unknown</description>
    <inlineHelpText>Code denoting whether this business is a single location, a corporate or subsidiary headquarters location, or a branch location.</inlineHelpText>
    <label>Headquarters Branch Code</label>
    <type>TextArea</type>
</CustomField>