main/default/objects/Georesults_business__c/fields/Hide_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Hide_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked hide the prospect from showing on prospect map.  Filled in via SQL script that contains the matching between Account and GR business.</description>
    <label>Hide Prospect</label>
    <type>Checkbox</type>
</CustomField>