main/default/objects/Georesults_business__c/fields/InterLATATelSpend__c.field-meta.xml
<CustomField>
    <fullName>InterLATATelSpend__c</fullName>
    <description>Estimated telecommunications expenditures of this business for all long distance calling (toll) services between LATAs including local taxes but excluding wireless services. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>InterLATA TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>