main/default/objects/Georesults_business__c/fields/LATAcode__c.field-meta.xml
<CustomField>
    <fullName>LATAcode__c</fullName>
    <description>3-5 digit code for the LATA where this business is located.</description>
    <label>LATA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>