main/default/objects/Georesults_business__c/fields/LNP_CBSA__c.field-meta.xml
<CustomField>
    <fullName>LNP_CBSA__c</fullName>
    <description>Core Based Statistical Area (CBSA) where this Telephone Number Switch Building is located. Defined by the Office of Management and Budget (OMB), a CBSA is a collective term for both metropolitan and micropolitan areas for use by Federal agencies in collecting, tabulating, and publishing Federal statistics. A metropolitan area contains a core urban area of 50,000 or more population, and a micropolitan area contains an urban core of at least 10,000 (but less than 50,000) population. Each metropolitan or micropolitan area consists of one or more counties and includes the counties containing the core urban area, as well as any adjacent counties that have a high degree of social and economic integration with the urban core as measured by commuting ties. A CBSA must contain at least one urban area of 10,000 or more population. CBSA is determined by locating this Telephone Number Switch Building address, using latitude and longitude, on a US CBSA map. If this Telephone Number Switch Building</description>
    <label>LNP CBSA</label>
    <type>TextArea</type>
</CustomField>