main/default/objects/Georesults_business__c/fields/LNP_CBSAcode__c.field-meta.xml
<CustomField>
    <fullName>LNP_CBSAcode__c</fullName>
    <description>5-digit code associated with the CBSA where this Telephone Number Switch Building is located.</description>
    <label>LNP CBSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>