main/default/objects/Georesults_business__c/fields/LNP_DBvin__c.field-meta.xml
<CustomField>
    <fullName>LNP_DBvin__c</fullName>
    <description>The Date of the GeoLNP information. The GeoLNP database contains information about each Telephone Number from 1997 to the present. A client can request information from any date. The Database Vintage could be the current date to indicate that this is the most current information in the GeoLNP database for this Telephone Number. The Database Vintage could also be a previous date to indicate the GeoLNP database information from that previous date for this Telephone Number (TN).</description>
    <label>Database Vintage</label>
    <type>TextArea</type>
</CustomField>