main/default/objects/Georesults_business__c/fields/LNP_DuplicateTN__c.field-meta.xml
<CustomField>
    <fullName>LNP_DuplicateTN__c</fullName>
    <description>The GeoResults assigned code to indicate a duplicate telephone number.  A code of &quot;0&quot; indicates that this is not a duplicate telephone number in the file. A code of &quot;1&quot; indicates that this is a duplicate telephone number in the file.</description>
    <label>Duplicate Telephone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>