main/default/objects/Georesults_business__c/fields/LNP_GeoLSPclass__c.field-meta.xml
<CustomField>
    <fullName>LNP_GeoLSPclass__c</fullName>
    <description>The Telephone Industry Classification (Wireless or Wireline) associated with the GeoName Local Service Provider (LSP) as identified through primary research by GeoResults.</description>
    <label>Provisioning GeoLSP Class</label>
    <type>TextArea</type>
</CustomField>