main/default/objects/Georesults_business__c/fields/LNP_GeoLSPname__c.field-meta.xml
<CustomField>
    <fullName>LNP_GeoLSPname__c</fullName>
    <description>The GeoName is the current Primary Business Name used in the marketplace to refer to the Provisioning Local Service Provider (LSP) as identified through primary research by GeoResults.  The Provisioning Local Service Provider is the provider of network switching infrastructure to support this Telephone Number.  NOTE: This field will show &quot;Undetermined&quot; to indicate that no OCN Code nor OCN Name could be found for this Telephone Number.  This field will show &quot;Unknown&quot; to indicate that no OCN Name could be found for this Telephone Number.</description>
    <label>GeoName - Local Service Provider (LSP)</label>
    <type>TextArea</type>
</CustomField>